background color and left side bar dark mode fixed.

--- a/BBMS/src/App.css
+++ b/BBMS/src/App.css
@@ -1,13 +1,23 @@
 
-.container {
-  min-height: 100%;
-  background-color: rgb(249, 239, 226);
-  display: flex;
-  flex-direction: column;
-  margin-top: 11vh;
-  width: 100wh;;
+body, html, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-.dark {
-  background-color: rgb(77, 77, 77);
+body, .container {
+  background-color: rgb(249, 239, 226);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
+
+.dark body {
+  background-color: rgb(0, 0, 0);
+}
+
+.dark .container {
+  background-color: rgb(0, 0, 0);
+}
+
+
